--- a/Patrimonio2014/App.config
+++ b/Patrimonio2014/App.config
@@ -5,6 +5,12 @@
             <section name="Patrimonio2014.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
+    
+    <connectionStrings>
+        <add name="Patrimonio2014.My.MySettings.IMMOBILIConnectionString"
+            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\archivi\IMMOBILI.accdb"
+            providerName="System.Data.OleDb" />
+    </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client" />
     </startup>
