--- a/Patrimonio2014/Patrimonio2014.vbproj
+++ b/Patrimonio2014/Patrimonio2014.vbproj
@@ -72,17 +72,8 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controls\License.vb" />
-    <Compile Include="FormMenu\Opzioni.Designer.vb">
-      <DependentUpon>Opzioni.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\Opzioni.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Infrastracture\DBlayerAC.vb" />
-    <Compile Include="Infrastracture\Interactive.vb" />
-    <Compile Include="Infrastracture\Message.vb" />
-    <Compile Include="Infrastracture\Query.vb" />
+    <Compile Include="Controls\DBlayer.vb" />
+    <Compile Include="Controls\Query.vb" />
     <Compile Include="Controls\ToolBarComune.vb" />
     <Compile Include="FormMenu\AboutBox1.Designer.vb">
       <DependentUpon>AboutBox1.vb</DependentUpon>
@@ -108,18 +99,19 @@
     <Compile Include="FormMenu\Fornitori.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm\LoginForm1.Designer.vb">
+    <Compile Include="IMMOBILIDataSet.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>IMMOBILIDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="LoginForm1.Designer.vb">
       <DependentUpon>LoginForm1.vb</DependentUpon>
     </Compile>
-    <Compile Include="MainForm\LoginForm1.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MainForm\MainForm.Designer.vb">
+    <Compile Include="LoginForm1.vb" />
+    <Compile Include="MainForm.Designer.vb">
       <DependentUpon>MainForm.vb</DependentUpon>
     </Compile>
-    <Compile Include="MainForm\MainForm.vb">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="MainForm.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -143,13 +135,10 @@
     <EmbeddedResource Include="FormMenu\Fornitori.resx">
       <DependentUpon>Fornitori.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\Opzioni.resx">
-      <DependentUpon>Opzioni.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MainForm\LoginForm1.resx">
+    <EmbeddedResource Include="LoginForm1.resx">
       <DependentUpon>LoginForm1.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainForm\MainForm.resx">
+    <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -161,6 +150,17 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="IMMOBILIDataSet.xsc">
+      <DependentUpon>IMMOBILIDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="IMMOBILIDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>IMMOBILIDataSet.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="IMMOBILIDataSet.xss">
+      <DependentUpon>IMMOBILIDataSet.xsd</DependentUpon>
+    </None>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
