--- a/Patrimonio2014/Patrimonio2014.vbproj
+++ b/Patrimonio2014/Patrimonio2014.vbproj
@@ -72,8 +72,7 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controls\DBlayer.vb" />
-    <Compile Include="Controls\Query.vb" />
+    <Compile Include="Controls\License.vb" />
     <Compile Include="Controls\ToolBarComune.vb" />
     <Compile Include="FormMenu\AboutBox1.Designer.vb">
       <DependentUpon>AboutBox1.vb</DependentUpon>
@@ -99,19 +98,33 @@
     <Compile Include="FormMenu\Fornitori.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FormMenu\Opzioni.Designer.vb">
+      <DependentUpon>Opzioni.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormMenu\Opzioni.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="IMMOBILIDataSet.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>IMMOBILIDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="LoginForm1.Designer.vb">
+    <Compile Include="Infrastracture\DBlayerAC.vb" />
+    <Compile Include="Infrastracture\Interactive.vb" />
+    <Compile Include="Infrastracture\Message.vb" />
+    <Compile Include="Infrastracture\Query.vb" />
+    <Compile Include="MainForm\LoginForm1.Designer.vb">
       <DependentUpon>LoginForm1.vb</DependentUpon>
     </Compile>
-    <Compile Include="LoginForm1.vb" />
-    <Compile Include="MainForm.Designer.vb">
+    <Compile Include="MainForm\LoginForm1.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm\MainForm.Designer.vb">
       <DependentUpon>MainForm.vb</DependentUpon>
     </Compile>
-    <Compile Include="MainForm.vb" />
+    <Compile Include="MainForm\MainForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -135,10 +148,13 @@
     <EmbeddedResource Include="FormMenu\Fornitori.resx">
       <DependentUpon>Fornitori.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LoginForm1.resx">
+    <EmbeddedResource Include="FormMenu\Opzioni.resx">
+      <DependentUpon>Opzioni.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForm\LoginForm1.resx">
       <DependentUpon>LoginForm1.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainForm.resx">
+    <EmbeddedResource Include="MainForm\MainForm.resx">
       <DependentUpon>MainForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
