--- a/Patrimonio2014/Patrimonio2014.vbproj
+++ b/Patrimonio2014/Patrimonio2014.vbproj
@@ -110,10 +110,10 @@
       <DependentUpon>IMMOBILIDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="Infrastracture\DBlayerAC.vb" />
-    <Compile Include="Infrastracture\Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <Compile Include="FormMenu\Anagrafiche.Designer.vb">
+      <DependentUpon>Anagrafiche.vb</DependentUpon>
     </Compile>
-    <Compile Include="Infrastracture\Form1.vb">
+    <Compile Include="FormMenu\Anagrafiche.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Infrastracture\Interactive.vb" />
@@ -160,8 +160,8 @@
     <EmbeddedResource Include="FormMenu\Opzioni.resx">
       <DependentUpon>Opzioni.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Infrastracture\Form1.resx">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <EmbeddedResource Include="FormMenu\Anagrafiche.resx">
+      <DependentUpon>Anagrafiche.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm\LoginForm1.resx">
       <DependentUpon>LoginForm1.vb</DependentUpon>
