--- a/Patrimonio2014/Patrimonio2014.vbproj
+++ b/Patrimonio2014/Patrimonio2014.vbproj
@@ -92,6 +92,30 @@
     <Compile Include="FormMenu\Costanti.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FormMenu\Assemblea.Designer.vb">
+      <DependentUpon>Assemblea.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormMenu\Assemblea.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMenu\ContiFinanziari.Designer.vb">
+      <DependentUpon>ContiFinanziari.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormMenu\ContiFinanziari.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMenu\Fabbricati.Designer.vb">
+      <DependentUpon>Fabbricati.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormMenu\Fabbricati.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMenu\Fondi.Designer.vb">
+      <DependentUpon>Fondi.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormMenu\Fondi.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FormMenu\Fornitori.Designer.vb">
       <DependentUpon>Fornitori.vb</DependentUpon>
     </Compile>
@@ -153,6 +177,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormMenu\AnagraficaStudio.resx">
       <DependentUpon>AnagraficaStudio.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMenu\Assemblea.resx">
+      <DependentUpon>Assemblea.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMenu\ContiFinanziari.resx">
+      <DependentUpon>ContiFinanziari.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMenu\Costanti.resx">
+      <DependentUpon>Costanti.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMenu\Fabbricati.resx">
+      <DependentUpon>Fabbricati.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMenu\Fondi.resx">
+      <DependentUpon>Fondi.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormMenu\Fornitori.resx">
       <DependentUpon>Fornitori.vb</DependentUpon>
