--- a/Patrimonio2014/App.config
+++ b/Patrimonio2014/App.config
@@ -10,6 +10,9 @@
         <add name="Patrimonio2014.My.MySettings.IMMOBILIConnectionString"
             connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\archivi\IMMOBILI.accdb"
             providerName="System.Data.OleDb" />
+        <add name="Patrimonio2014.My.MySettings.IMMOBILIConnectionString1"
+            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=&quot;C:\Users\Computer\Downloads\Senza titolo (1)\IMMOBILI\IMMOBILI.accdb&quot;"
+            providerName="System.Data.OleDb" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client" />
