--- a/Patrimonio2014/My Project/Settings.settings
+++ b/Patrimonio2014/My Project/Settings.settings
@@ -13,5 +13,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\archivi\IMMOBILI.accdb</Value>
     </Setting>
+    <Setting Name="IMMOBILIConnectionString1" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Provider=Microsoft.ACE.OLEDB.12.0;Data Source="C:\Users\Computer\Downloads\Senza titolo (1)\IMMOBILI\IMMOBILI.accdb"&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.OleDb&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Provider=Microsoft.ACE.OLEDB.12.0;Data Source="C:\Users\Computer\Downloads\Senza titolo (1)\IMMOBILI\IMMOBILI.accdb"</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
