--- a/Patrimonio2014/Patrimonio2014.vbproj
+++ b/Patrimonio2014/Patrimonio2014.vbproj
@@ -255,12 +255,17 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="IMMOBILIDataSet.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
       <DependentUpon>IMMOBILIDataSet.xsd</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
     </Compile>
     <Compile Include="IMMOBILIDataSet.vb">
       <DependentUpon>IMMOBILIDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="IMMOBILIDataSet1.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>IMMOBILIDataSet1.xsd</DependentUpon>
     </Compile>
     <Compile Include="Infrastracture\DBlayerAC.vb" />
     <Compile Include="Infrastracture\Interactive.vb" />
@@ -398,12 +403,23 @@
       <DependentUpon>IMMOBILIDataSet.xsd</DependentUpon>
     </None>
     <None Include="IMMOBILIDataSet.xsd">
+      <SubType>Designer</SubType>
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>IMMOBILIDataSet.Designer.vb</LastGenOutput>
-      <SubType>Designer</SubType>
     </None>
     <None Include="IMMOBILIDataSet.xss">
       <DependentUpon>IMMOBILIDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="IMMOBILIDataSet1.xsc">
+      <DependentUpon>IMMOBILIDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="IMMOBILIDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>IMMOBILIDataSet1.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="IMMOBILIDataSet1.xss">
+      <DependentUpon>IMMOBILIDataSet1.xsd</DependentUpon>
     </None>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
