--- a/Patrimonio2014/Patrimonio2014.vbproj
+++ b/Patrimonio2014/Patrimonio2014.vbproj
@@ -72,7 +72,14 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\Common.vb" />
     <Compile Include="Controls\License.vb" />
+    <Compile Include="Controls\Umenu.Designer.vb">
+      <DependentUpon>Umenu.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Umenu.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Controls\ToolBarComune.vb" />
     <Compile Include="FormMenu\AboutBox1.Designer.vb">
       <DependentUpon>AboutBox1.vb</DependentUpon>
@@ -300,6 +307,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Controls\Umenu.resx">
+      <DependentUpon>Umenu.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormMenu\AboutBox1.resx">
       <DependentUpon>AboutBox1.vb</DependentUpon>
     </EmbeddedResource>
