--- a/Patrimonio2014/Patrimonio2014.vbproj
+++ b/Patrimonio2014/Patrimonio2014.vbproj
@@ -87,46 +87,10 @@
     <Compile Include="FormMenu\AboutBox1.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormMenu\AnagraficaStudio.Designer.vb">
-      <DependentUpon>AnagraficaStudio.vb</DependentUpon>
+    <Compile Include="FormMenu\Cassa.Designer.vb">
+      <DependentUpon>Cassa.vb</DependentUpon>
     </Compile>
-    <Compile Include="FormMenu\AnagraficaStudio.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\Anagrafiche.Designer.vb">
-      <DependentUpon>Anagrafiche.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\Anagrafiche.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\Assemblea.Designer.vb">
-      <DependentUpon>Assemblea.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\Assemblea.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\ContiFinanziari.Designer.vb">
-      <DependentUpon>ContiFinanziari.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\ContiFinanziari.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\Costanti.Designer.vb">
-      <DependentUpon>Costanti.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\Costanti.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\Fabbricati.Designer.vb">
-      <DependentUpon>Fabbricati.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\Fabbricati.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\Fondi.Designer.vb">
-      <DependentUpon>Fondi.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\Fondi.vb">
+    <Compile Include="FormMenu\Cassa.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormMenu\Fornitori.Designer.vb">
@@ -135,144 +99,11 @@
     <Compile Include="FormMenu\Fornitori.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormMenu\Gruppi.Designer.vb">
-      <DependentUpon>Gruppi.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\Gruppi.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\Immobili.Designer.vb">
-      <DependentUpon>Immobili.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\Immobili.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="FormMenu\Opzioni.Designer.vb">
       <DependentUpon>Opzioni.vb</DependentUpon>
     </Compile>
     <Compile Include="FormMenu\Opzioni.vb">
       <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\PianoContiConsuntivo.Designer.vb">
-      <DependentUpon>PianoContiConsuntivo.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\PianoContiConsuntivo.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\PianoContiPreventivo.Designer.vb">
-      <DependentUpon>PianoContiPreventivo.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\PianoContiPreventivo.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\Tabella.Designer.vb">
-      <DependentUpon>Tabella.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\Tabella.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\Unita.Designer.vb">
-      <DependentUpon>Unita.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\Unita.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\V_Preventivo.Designer.vb">
-      <DependentUpon>V_Preventivo.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\V_Preventivo.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\W_Emissioni.Designer.vb">
-      <DependentUpon>W_Emissioni.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\W_Emissioni.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\W_Ritenute.Designer.vb">
-      <DependentUpon>W_Ritenute.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\W_Ritenute.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\W_Tributi.Designer.vb">
-      <DependentUpon>W_Tributi.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\W_Tributi.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\X_Causali.Designer.vb">
-      <DependentUpon>X_Causali.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\X_Causali.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\X_Fatture.Designer.vb">
-      <DependentUpon>X_Fatture.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\X_Fatture.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\X_MovimentiCondomini.Designer.vb">
-      <DependentUpon>X_MovimentiCondomini.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\X_MovimentiCondomini.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\X_MovimentiFinanziari.Designer.vb">
-      <DependentUpon>X_MovimentiFinanziari.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\X_MovimentiFinanziari.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\X_MovimentoFondi.Designer.vb">
-      <DependentUpon>X_MovimentoFondi.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\X_MovimentoFondi.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\X_Spese.Designer.vb">
-      <DependentUpon>X_Spese.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\X_Spese.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\Y_Gestioni.Designer.vb">
-      <DependentUpon>Y_Gestioni.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\Y_Gestioni.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\Y_GestioniUnita.Designer.vb">
-      <DependentUpon>Y_GestioniUnita.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\Y_GestioniUnita.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\Z_Consuntivo.Designer.vb">
-      <DependentUpon>Z_Consuntivo.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\Z_Consuntivo.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormMenu\Z_TestoSollecito.Designer.vb">
-      <DependentUpon>Z_TestoSollecito.vb</DependentUpon>
-    </Compile>
-    <Compile Include="FormMenu\Z_TestoSollecito.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="IMMOBILIDataSet.Designer.vb">
-      <DependentUpon>IMMOBILIDataSet.xsd</DependentUpon>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="IMMOBILIDataSet.vb">
-      <DependentUpon>IMMOBILIDataSet.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="IMMOBILIDataSet1.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>IMMOBILIDataSet1.xsd</DependentUpon>
     </Compile>
     <Compile Include="IMMOBILIDataSet2.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -318,92 +149,14 @@
     <EmbeddedResource Include="FormMenu\AboutBox1.resx">
       <DependentUpon>AboutBox1.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\AnagraficaStudio.resx">
-      <DependentUpon>AnagraficaStudio.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\Anagrafiche.resx">
-      <DependentUpon>Anagrafiche.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\Assemblea.resx">
-      <DependentUpon>Assemblea.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\ContiFinanziari.resx">
-      <DependentUpon>ContiFinanziari.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\Costanti.resx">
-      <DependentUpon>Costanti.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\Fabbricati.resx">
-      <DependentUpon>Fabbricati.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\Fondi.resx">
-      <DependentUpon>Fondi.vb</DependentUpon>
+    <EmbeddedResource Include="FormMenu\Cassa.resx">
+      <DependentUpon>Cassa.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormMenu\Fornitori.resx">
       <DependentUpon>Fornitori.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\Gruppi.resx">
-      <DependentUpon>Gruppi.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\Immobili.resx">
-      <DependentUpon>Immobili.vb</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="FormMenu\Opzioni.resx">
       <DependentUpon>Opzioni.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\PianoContiConsuntivo.resx">
-      <DependentUpon>PianoContiConsuntivo.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\PianoContiPreventivo.resx">
-      <DependentUpon>PianoContiPreventivo.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\Tabella.resx">
-      <DependentUpon>Tabella.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\Unita.resx">
-      <DependentUpon>Unita.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\V_Preventivo.resx">
-      <DependentUpon>V_Preventivo.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\W_Emissioni.resx">
-      <DependentUpon>W_Emissioni.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\W_Ritenute.resx">
-      <DependentUpon>W_Ritenute.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\W_Tributi.resx">
-      <DependentUpon>W_Tributi.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\X_Causali.resx">
-      <DependentUpon>X_Causali.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\X_Fatture.resx">
-      <DependentUpon>X_Fatture.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\X_MovimentiCondomini.resx">
-      <DependentUpon>X_MovimentiCondomini.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\X_MovimentiFinanziari.resx">
-      <DependentUpon>X_MovimentiFinanziari.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\X_MovimentoFondi.resx">
-      <DependentUpon>X_MovimentoFondi.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\X_Spese.resx">
-      <DependentUpon>X_Spese.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\Y_Gestioni.resx">
-      <DependentUpon>Y_Gestioni.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\Y_GestioniUnita.resx">
-      <DependentUpon>Y_GestioniUnita.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\Z_Consuntivo.resx">
-      <DependentUpon>Z_Consuntivo.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormMenu\Z_TestoSollecito.resx">
-      <DependentUpon>Z_TestoSollecito.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm\LoginForm1.resx">
       <DependentUpon>LoginForm1.vb</DependentUpon>
@@ -420,28 +173,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="IMMOBILIDataSet.xsc">
-      <DependentUpon>IMMOBILIDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="IMMOBILIDataSet.xsd">
-      <SubType>Designer</SubType>
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>IMMOBILIDataSet.Designer.vb</LastGenOutput>
-    </None>
-    <None Include="IMMOBILIDataSet.xss">
-      <DependentUpon>IMMOBILIDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="IMMOBILIDataSet1.xsc">
-      <DependentUpon>IMMOBILIDataSet1.xsd</DependentUpon>
-    </None>
-    <None Include="IMMOBILIDataSet1.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>IMMOBILIDataSet1.Designer.vb</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="IMMOBILIDataSet1.xss">
-      <DependentUpon>IMMOBILIDataSet1.xsd</DependentUpon>
-    </None>
     <None Include="IMMOBILIDataSet2.xsc">
       <DependentUpon>IMMOBILIDataSet2.xsd</DependentUpon>
     </None>
